# gaggibot

./: AGENTS.md  Dockerfile  README.md  docker-compose.example.yml  flake.nix  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
scripts/: discord_cmd_smoke.py  discord_smoke.py
src/gaggibot/: bags.py  cli.py  commands.py  config.py  hints.py  sitegen.py  sync.py  watcher.py
src/gaggibot/messengers/: telegram.py
src/gaggibot/web/: app.js  index.html  style.css
src/matebot/: __init__.py  calibrate.py  cli.py  commands.py  config.py  conversation.py  digest.py  hints.py  machine.py  plot.py  render.py  sitegen.py  slog.py  state.py  sync.py  video.py  watcher.py
src/matebot/messengers/: __init__.py  base.py  discord.py  telegram.py
src/matebot/web/: app.js  index.html  style.css
src/matebot/web_cam/: index.html
tests/: test_bags.py  test_calibrate.py  test_cleaning.py  test_commands.py  test_conversation.py  test_digest.py  test_hints.py  test_plot.py  test_render.py  test_sitegen.py  test_slog.py  test_sync_retry.py  test_video.py  test_watcher.py
